# SyncCanvans-

./: .gitignore  README.md
.VSCodeCounter/2026-01-22_22-01-41/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2026-02-03_00-33-55/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2026-02-03_00-40-24/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
CanvasServer/: CMakeLists.txt  CMakePresets.json  config.ini  gen_message.bat
CanvasServer/include/CanvasServer/: CSession.h  LogicSystem.h  RedisMgr.h  Room.h  SessionMgr.h  Singleton.h  const.h
CanvasServer/src/: AsioIOServicePool.cpp  CSession.cpp  CanvasServer.cpp  ConfigMgr.cpp  LogicSystem.cpp  RedisMgr.cpp  Room.cpp  message.grpc.pb.cc  message.pb.cc
CanvasServer2/: CMakeLists.txt  config.ini  message.proto
CanvasServer2/include/CanvasServer/: AsioIOServicePool.h  CServer.h  CanvasServer.h  ConfigMgr.h  LogicSystem.h  MsgNode.h  RedisMgr.h  Room.h  RoomMgr.h  const.h  message.grpc.pb.h  message.pb.h
CanvasServer2/src/: CServer.cpp  CanvasServer.cpp  Room.cpp  RoomMgr.cpp  SessionMgr.cpp  message.grpc.pb.cc  message.pb.cc
DBClient/: CMakeLists.txt  canvas.cpp  canvas.h  canvas.ui  global.cpp  global.h  hoverwidget.cpp  hoverwidget.h  httpmgr.cpp  httpmgr.h  joinroomdialog.cpp  joinroomdialog.h  joinroomdialog.ui  lobbywidget.cpp  lobbywidget.h  lobbywidget.ui  loginwidget.cpp  loginwidget.h  loginwidget.ui  main.cpp  mainwindow.cpp  mainwindow.h  message.grpc.pb.cc  message.grpc.pb.h  message.pb.cc  message.pb.h  newroomdialog.cpp  newroomdialog.h  newroomdialog.ui  paintscene.cpp  paintscene.h  registerwidget.cpp  registerwidget.h  registerwidget.ui  res.qrc  resetwidget.cpp  resetwidget.h  resetwidget.ui  tcpmgr.cpp  tcpmgr.h  (+8 more)
GateServer/: config.ini  gen_message.bat
GateServer/include/GateServer/: HttpConnection.h  LogicGrpcClient.h  VerifyGrpcClient.h  message.grpc.pb.h
GateServer/src/: HttpConnection.cpp  LogicGrpcClient.cpp  LogicSystem.cpp  VerifyGrpcClient.cpp  message.grpc.pb.cc  message.pb.cc
LogicServer/: CMakeLists.txt  config.ini  config.ini.example  message.proto
LogicServer/include/LogicServer/: LogicServer.h  LogicServiceImpl.h  MysqlDao.h  MysqlMgr.h  MysqlPool.h  RedisMgr.h  const.h  data.h  message.grpc.pb.h  message.pb.h
LogicServer/src/: ConfigMgr.cpp  LogicServer.cpp  LogicServiceImpl.cpp  MysqlDao.cpp  MysqlMgr.cpp  MysqlPool.cpp  RedisMgr.cpp  message.grpc.pb.cc  message.pb.cc
